# sni-lua

./: .gitignore  Cargo.toml  LICENSE  README.md  build.cmd  build.ps1  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/sni-cache/: Cargo.toml
crates/sni-cache/src/: engine.rs  lib.rs  snapshot.rs  watch.rs
crates/sni-capture/: Cargo.toml
crates/sni-capture/src/: lib.rs
crates/sni-client/: Cargo.toml  build.rs
crates/sni-client/src/: lib.rs
crates/sni-lua-api/: Cargo.toml
crates/sni-lua-api/src/: controls.rs  lib.rs  runtime.rs
crates/sni-lua-app/: Cargo.toml
crates/sni-lua-app/src/: config.rs  main.rs  platform.rs  sni_actor.rs
crates/sni-render/: Cargo.toml
crates/sni-render/src/: font.rs  lib.rs  paint.rs
docs/: PACKAGING.md  SCRIPTING.md
examples/: Super_Hitbox_Mesen2_AnyG_route_assist_polished.lua  animated_input_viewer.lua  controls_demo.lua  draw_anim_demo.lua  drawing.lua  flashy_input_viewer.lua  hires_canvas.lua  hires_grid.lua  new_api_demo.lua  room_locked_viewer.lua  settings_panel.lua  sm_hud.lua  sm_stream_overlay.lua  store_and_http.lua  store_http_demo.lua  super_hitbox_sni.lua  toast.lua
examples/compat/: build_super_hitbox.lua  mesen2_prelude.lua  super_hitbox_adapter.lua  super_hitbox_adapter_part2.lua
proto/: sni.proto
scripts/: package.ps1  package.sh
