[workspace]
resolver = "2"
members = [
    "crates/sni-client",
    "crates/sni-cache",
    "crates/sni-lua-api",
    "crates/sni-render",
    "crates/sni-capture",
    "crates/sni-lua-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sni-lua contributors"]
rust-version = "1.80"

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"

# error handling / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ui / rendering
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.29"
egui_extras = "0.29"

# lua
# No `send` feature: the ScriptHost is intentionally !Send (lives on the UI
# thread, driven from egui's update loop), so Lua closures can capture the
# single-threaded Rc<RefCell<DrawList>> directly.
mlua = { version = "0.10", features = ["luajit", "vendored", "serialize"] }

# misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
arc-swap = "1.7"
bytes = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
