[package]
name = "sni-lua-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sni-client = { path = "../sni-client" }
sni-cache = { path = "../sni-cache" }
sni-render = { path = "../sni-render" }
mlua.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
# Async HTTP for the script `http.*` API. rustls so there's no OpenSSL build
# dependency on Windows; json feature is unused (we hand Lua raw text).
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
