[package]
name = "sni-lua-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "sni-lua"

[[bin]]
name = "sni-lua"
path = "src/main.rs"

[dependencies]
sni-client = { path = "../sni-client" }
sni-cache = { path = "../sni-cache" }
sni-lua-api = { path = "../sni-lua-api" }
sni-render = { path = "../sni-render" }
sni-capture = { path = "../sni-capture" }

eframe.workspace = true
egui.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
raw-window-handle = "0.6"
# Native file-open dialog for picking a script. xdg-portal off: this is a
# Windows-first desktop app and the Win32 backend has no extra system deps.
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }

[target.'cfg(windows)'.dependencies]
# Applying WS_EX_TRANSPARENT|WS_EX_LAYERED to the HWND for true click-through
# in transparent-overlay mode (eframe handles transparent/topmost/no-decor,
# but not click-through).
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
