[package]
name = "sni-lua-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "sni-lua"

[[bin]]
name = "sni-lua"
path = "src/main.rs"

[dependencies]
sni-client = { path = "../sni-client" }
sni-cache = { path = "../sni-cache" }
sni-lua-api = { path = "../sni-lua-api" }
sni-render = { path = "../sni-render" }
sni-capture = { path = "../sni-capture" }

eframe.workspace = true
egui.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
# Native file-open dialog for picking a script. xdg-portal off keeps the
# Windows build dependency-free; the dialog is only used on an explicit
# click, off the render loop.
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }
