[package]
name = "sni-lua-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "sni-lua"

[[bin]]
name = "sni-lua"
path = "src/main.rs"

[dependencies]
sni-client = { path = "../sni-client" }
sni-cache = { path = "../sni-cache" }
sni-lua-api = { path = "../sni-lua-api" }
sni-render = { path = "../sni-render" }
sni-capture = { path = "../sni-capture" }

eframe.workspace = true
egui.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
# Native file-open dialog for picking a script.
# - Windows: keep xdg-portal off and force modern common controls.
# - Linux: enable a required backend explicitly (GTK3 in CI/dev images).
# - macOS: no extra backend feature required.
[target.'cfg(target_os = "windows")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

[target.'cfg(target_os = "macos")'.dependencies]
rfd = { version = "0.15", default-features = false }
